tests/NormalTests/paczka1/fuzzy1/22243742.err
Error in line 2: 1YjaduzgABu A84 1,1
Error in line 1: S847 A84 60,9
Error in line 5: 8hmf A84 34,3
Error in line 18: 1YjaduzgABu A170 10,8
Error in line 23: 1YjaduzgABu S847 -4,7
Error in line 22: 1YjaduzgABu S847 65,0
